@@ -153,10 +153,29 @@ Started as a media player .... it will finish as an AI ....
 
 To build XR3Player, you will need:
 
-* [JDK 10.0.2+]
-* [Maven](http://maven.apache.org/) - Version 3.5.3++
+* [JDK 11.0.3]
+* [Maven](http://maven.apache.org/) - Version 3.6.0++
 
-Follow the above instructions and run ``mvn clean package`` , be sure that you are compiling with Java 9
+Follow the above instructions and run ``mvn clean package`` , be sure that you are compiling with JDK 11
+
+In order to run the project you should add the following **VM Options** ( easy using IntelliJ , Eclipse or Netbeans ) :
+
+```JAVA
+--add-exports
+javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix
+--add-exports
+javafx.controls/com.sun.javafx.scene.control=com.jfoenix
+--add-exports
+javafx.base/com.sun.javafx.binding=com.jfoenix
+--add-exports
+javafx.graphics/com.sun.javafx.stage=com.jfoenix
+--add-exports
+javafx.base/com.sun.javafx.event=com.jfoenix
+--add-opens
+java.base/java.lang.reflect=ALL-UNNAMED
+--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls,
+--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls
+```
 
 ## About JxBrowser
 
